// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pokemon Card renders correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
>
  <div
    className="MuiPaper-root MuiPaper-elevation1 MuiCard-root sc-bwzfXH gPmFGo MuiPaper-rounded"
  >
    <div
      className="MuiCardMedia-root sc-htpNat bxEaqd"
      style={
        Object {
          "backgroundImage": "url(\\"https://someimage.com\\")",
        }
      }
      title="name"
    />
    <div
      className="MuiCardContent-root"
    >
      <div
        className="sc-bxivhb iXtRbx sc-bdVaJa kZAgjJ"
      >
        <h2
          className="MuiTypography-root sc-ifAKCX bUzTRP MuiTypography-h5"
        >
          name
        </h2>
        <p
          className="MuiTypography-root sc-EHOje jPiFzx MuiTypography-h5 MuiTypography-colorTextSecondary"
        >
          #number
        </p>
      </div>
      <div
        className="sc-bxivhb iXtRbx sc-bdVaJa kZAgjJ"
      >
        <div
          className="sc-bdVaJa kZAgjJ"
        >
          ID:
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
        >
          id
        </p>
      </div>
      <div
        className="sc-bxivhb iXtRbx sc-bdVaJa kZAgjJ"
      >
        <div
          className="sc-bdVaJa kZAgjJ"
        >
          Type:
        </div>
        <div
          className="sc-gzVnrw iKWuGe sc-bdVaJa kZAgjJ"
        >
          <div
            className="sc-htoDjs dCzLKI sc-bdVaJa kZAgjJ"
            type="Ghost"
          >
            Ghost
          </div>
          <div
            className="sc-htoDjs gbdiEo sc-bdVaJa kZAgjJ"
            type="Normal"
          >
            Normal
          </div>
        </div>
      </div>
      <div
        className="sc-bxivhb iXtRbx sc-bdVaJa kZAgjJ"
      >
        <div
          className="sc-bdVaJa kZAgjJ"
        >
          HP:
        </div>
        <div
          aria-describedby={null}
          aria-valuenow={15}
          className="MuiLinearProgress-root MuiLinearProgress-colorPrimary sc-bZQynM hzDXFo MuiLinearProgress-determinate"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="progressbar"
          title="Max HP: 456"
        >
          <div
            className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
            style={
              Object {
                "transform": "translateX(-85%)",
              }
            }
          />
        </div>
      </div>
      <div
        className="sc-bxivhb iXtRbx sc-bdVaJa kZAgjJ"
      >
        <div
          className="sc-bdVaJa kZAgjJ"
        >
          CP:
        </div>
        <div
          aria-describedby={null}
          aria-valuenow={4}
          className="MuiLinearProgress-root MuiLinearProgress-colorPrimary sc-bZQynM hzDXFo MuiLinearProgress-determinate"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="progressbar"
          title="Max CP: 123"
        >
          <div
            className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
            style={
              Object {
                "transform": "translateX(-96%)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pokemon Card when details click callback is used renders correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
>
  <div
    className="MuiPaper-root MuiPaper-elevation1 MuiCard-root sc-bwzfXH gPmFGo MuiPaper-rounded"
  >
    <div
      className="MuiCardMedia-root sc-htpNat bxEaqd"
      style={
        Object {
          "backgroundImage": "url(\\"https://someimage.com\\")",
        }
      }
      title="name"
    />
    <div
      className="MuiCardContent-root"
    >
      <div
        className="sc-bxivhb iXtRbx sc-bdVaJa kZAgjJ"
      >
        <h2
          className="MuiTypography-root sc-ifAKCX bUzTRP MuiTypography-h5"
        >
          name
        </h2>
        <p
          className="MuiTypography-root sc-EHOje jPiFzx MuiTypography-h5 MuiTypography-colorTextSecondary"
        >
          #number
        </p>
      </div>
      <div
        className="sc-bxivhb iXtRbx sc-bdVaJa kZAgjJ"
      >
        <div
          className="sc-bdVaJa kZAgjJ"
        >
          ID:
        </div>
        <p
          className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
        >
          id
        </p>
      </div>
      <div
        className="sc-bxivhb iXtRbx sc-bdVaJa kZAgjJ"
      >
        <div
          className="sc-bdVaJa kZAgjJ"
        >
          Type:
        </div>
        <div
          className="sc-gzVnrw iKWuGe sc-bdVaJa kZAgjJ"
        >
          <div
            className="sc-htoDjs dCzLKI sc-bdVaJa kZAgjJ"
            type="Ghost"
          >
            Ghost
          </div>
          <div
            className="sc-htoDjs gbdiEo sc-bdVaJa kZAgjJ"
            type="Normal"
          >
            Normal
          </div>
        </div>
      </div>
      <div
        className="sc-bxivhb iXtRbx sc-bdVaJa kZAgjJ"
      >
        <div
          className="sc-bdVaJa kZAgjJ"
        >
          HP:
        </div>
        <div
          aria-describedby={null}
          aria-valuenow={15}
          className="MuiLinearProgress-root MuiLinearProgress-colorPrimary sc-bZQynM hzDXFo MuiLinearProgress-determinate"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="progressbar"
          title="Max HP: 456"
        >
          <div
            className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
            style={
              Object {
                "transform": "translateX(-85%)",
              }
            }
          />
        </div>
      </div>
      <div
        className="sc-bxivhb iXtRbx sc-bdVaJa kZAgjJ"
      >
        <div
          className="sc-bdVaJa kZAgjJ"
        >
          CP:
        </div>
        <div
          aria-describedby={null}
          aria-valuenow={4}
          className="MuiLinearProgress-root MuiLinearProgress-colorPrimary sc-bZQynM hzDXFo MuiLinearProgress-determinate"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="progressbar"
          title="Max CP: 123"
        >
          <div
            className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
            style={
              Object {
                "transform": "translateX(-96%)",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="MuiCardActions-root MuiCardActions-spacing"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall"
        data-test="more-info-btn"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          More information
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
